--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pdfkit": "^0.16.0",
+    "xmlbuilder2": "^3.1.1"
   },
-  
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
@@ -16,5 +17,5 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type":"module"
+  "type": "module"
 }
